+ base layout and modules architecture for each page of application

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -12,8 +12,10 @@
 @import "theme/links.less";
 @import "theme/forms.less";
 @import "theme/base.less";
-@import "layout.less";
 
 // Components
+@import "components/preloader.less";
+
 
 // States
+@import "layout.less";
