--- a/src/app/states/login/login.html
+++ b/src/app/states/login/login.html
@@ -6,3 +6,11 @@
 <h2> <a (click)="goHome()"> home (function) </a> </h2>
 
 <h2 uiSrefActive="active"> <a uiSref="home"> home (uiSref) </a> </h2>
+
+<h1> native directives  ngFor </h1>
+
+<ul>
+    <li *ngFor="let item of vm.items">
+        {{ item.name }}
+    </li>
+</ul>
